# logue-sdk

./: .gitignore
platform/nutekt-digital/demos/raves/: Makefile  README.md  build.rs  manifest.json  project.mk  waves.cpp  waves.hpp
platform/nutekt-digital/demos/raves/ld/: userosc.ld
platform/nutekt-digital/demos/raves/rust/: Cargo.toml  build.rs  userosc.x
platform/nutekt-digital/demos/raves/rust/.cargo/: config.toml
platform/nutekt-digital/demos/raves/rust/scripts/: pkg.sh
platform/nutekt-digital/demos/raves/rust/src/: biquad.rs  lib.rs  mathutil.rs  nts1.rs
platform/nutekt-digital/demos/raves/rust/src/nts1/: userosc.rs
platform/nutekt-digital/demos/raves/scripts/: pkg.sh  userosc.x
platform/nutekt-digital/demos/raves/src/: lib.rs  nts1.rs
platform/nutekt-digital/demos/raves/src/dsp/: biquad.rs
platform/nutekt-digital/demos/raves/src/nts1/: clipsat.rs  platform.rs  random.rs  userosc.rs  wavebank.rs
platform/nutekt-digital/demos/raves/tpl/: _unit.c
