[package]
name = "raves"
version = "0.1.0"
authors = ["Aaron Tomb <aarontomb@gmail.com>"]

[lib]
name = "raves"
crate-type = ["staticlib"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
opt-level = 1
lto = true
overflow-checks = false

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
opt-level = 3
overflow-checks = false
