[package]
name = "raves"
version = "0.1.0"
authors = ["Aaron Tomb <aarontomb@gmail.com>"]
edition = "2018"

[dependencies]
micromath = "1.1.0"
panic-halt = "0.2.0"

[lib]
name = "raves"
crate-type = ["staticlib"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
opt-level = 1
lto = true
overflow-checks = false

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
lto = true
opt-level = 3 # "z"
codegen-units = 1
overflow-checks = false

[profile.release.package."*"]
opt-level = 3 # "z"
codegen-units = 1
